--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,14 @@
     <script src='/dist/umd/vue.js'></script>
     <script>
         let vm = new Vue({
-            el: "#app"
+            el: "#app",
+            data() {
+                return {
+                    name: 'william'
+                }
+            }
         })
+        console.log(vm._data);
     </script>
 </body>
 
