--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,17 @@
             el: "#app",
             data() {
                 return {
-                    name: 'william'
+                    arr: [{name:'william'}]
                 }
             }
         })
-        console.log(vm._data);
+        vm.arr[0].name
+
+        // 数组没有监控 索引的变化， 但是索引对应的内容是对象类型，需要被监控 Object.freeze
+        // 用户很少通过索引操作数组 arr[82] = 1000 内部就想到不对索引进行拦截，因为消耗严重，内部数组不采用defineProperty
+        
+        
+        // push shift pop unshift reverse sort splice 7个方法都是变异方法，就是会更改原数组
     </script>
 </body>
 
