增加模板解析

--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,26 @@
 </head>
 
 <body>
+    <div id="app">{{name}}</div>
     <script src='/dist/umd/vue.js'></script>
     <script>
         let vm = new Vue({
             el: "#app",
             data() {
                 return {
-                    arr: [{name:'william'}]
+                    arr: [{ name: 'william' }]
                 }
+            },
+            render() {
+                return h('div', { class: 'xxx' }, 'hello')
             }
         })
         vm.arr[0].name
 
         // 数组没有监控 索引的变化， 但是索引对应的内容是对象类型，需要被监控 Object.freeze
         // 用户很少通过索引操作数组 arr[82] = 1000 内部就想到不对索引进行拦截，因为消耗严重，内部数组不采用defineProperty
-        
-        
+
+
         // push shift pop unshift reverse sort splice 7个方法都是变异方法，就是会更改原数组
     </script>
 </body>
