增加标签解析

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
                     arr: [{ name: 'william' }]
                 }
             },
-            render() {
-                return h('div', { class: 'xxx' }, 'hello')
-            }
+            // render() {
+            //     return h('div', { class: 'xxx' }, 'hello')
+            // }
         })
         vm.arr[0].name
 
