ast转化为可执行字符串

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app">{{name}}</div>
+    <div id="app" a=1 style="color:red;background:blue;">hello {{arr}} world</div>
     <script src='/dist/umd/vue.js'></script>
     <script>
         let vm = new Vue({
